# running-arm-on-x86-linux

./: CMakeLists.txt  README.md  make_and_run.sh
src/: CMakeLists.txt  main.cpp
